fix scrolling sticky header not showing all the way right

--- a/hydrotable/static/hydrotable/css/demo_table.css
+++ b/hydrotable/static/hydrotable/css/demo_table.css
@@ -337,7 +337,6 @@ tr.even, table.DTFC_Cloned tr.even {
 
 .dataTables_scrollBody {
 	*margin-top: -1px;
-	-webkit-overflow-scrolling: touch;
 }
 
 .top, .bottom {
